--- a/templates/documents.j2
+++ b/templates/documents.j2
@@ -1,7 +1,7 @@
 <div class="row">
     <div id="documentList" class="list-group" style="width:15%; padding-right:20px;">
         {% for document in person['documents'] %}
-        <a href="#" class="list-group-item list-group-item-action active" aria-current="true" data-file="{{ document['url'] }}">{{ document['title'] }}</a>
+        <a href="#" class="list-group-item list-group-item-action" aria-current="true" data-file="{{ document['url'] }}">{{ document['title'] }}</a>
         {% endfor %}
     </div>
     <div id="documentViewerContainer" class="col pl-0"></div>
