--- a/templates/videos.j2
+++ b/templates/videos.j2
@@ -1,7 +1,12 @@
-<div class="row">
-    {% for item in person['videos'] %}
-    <div class="col">
-        <iframe width="{{ item['width'] }}" height="{{ item['height'] }}" src="{{ item['url'] }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>
-    </div>
+{% for video_batch in person['videos'] | batch(2) %}
+    <div class="row mb-4">
+    {% for item in video_batch %}
+        <div class="col-sm-6">
+            {% if item['description'] %}
+            <div class="mb-2">{{ item['description'] }}</div>
+            {% endif %}
+            <iframe width="{{ item['width'] }}" height="{{ item['height'] }}" src="{{ item['url'] }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>
+        </div>
     {% endfor %}
 </div>
+{% endfor %}
