--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,17 @@
-#content {
-    padding-top: 20px;
+.carousel-caption, .carousel-control-next, .carousel-control-prev {
+    position: unset;
+    color:unset;
 }
 
-.card-columns {
-    column-count: 1;
+.carousel-control-next, .carousel-control-prev {
+    opacity: 1;
+}
+
+.carousel-control-next:focus, .carousel-control-next:hover, .carousel-control-prev:focus, .carousel-control-prev:hover {
+    color: unset;
+}
+
+.nav-link {
+    font-size: x-large;
+    cursor: pointer;
 }
