--- a/templates/photos.j2
+++ b/templates/photos.j2
@@ -1,20 +1,22 @@
-<div id="carousel" class="carousel slide">
+<div id="carousel" class="carousel slide"  data-bs-interval="false">
     <div class="carousel-inner">
         {% for photo in person['photos'] %}
         <div class="carousel-item{% if loop.first %} active{% endif %}">
-            <img class="d-block w-100" src="{{ photo['url'] }}"{% if photo['title'] %} alt="{{ photo['title'] }}"{% endif %}>
-            <div class="carousel-caption d-none d-md-block">
-            <h5>{{ photo['title'] }}</h5>
+            <div class="carousel-caption d-flex">
+                <button class="carousel-control-prev justify-content-start" href="#carousel" role="button" data-bs-slide="prev">
+                    <span class="start-0 bi bi-arrow-left pr-2" aria-hidden="true"></span>
+                    <span>Previous</span>
+                </button>
+                <div class="flex-grow-1">
+                    {{ photo['title'] }}
+                </div>
+                <button class="carousel-control-next justify-content-end" href="#carousel" role="button" data-bs-slide="next">
+                    <span>Next</span>
+                    <span class="start-0 bi bi-arrow-right pl-2" aria-hidden="true"></span>
+                </button>
             </div>
+            <img class="d-block w-100" src="{{ photo['url'] }}"{% if photo['title'] %} alt="{{ photo['title'] }}"{% endif %}>
         </div>
         {% endfor %}
     </div>
-    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
