--- a/templates/family.j2
+++ b/templates/family.j2
@@ -1,22 +1,20 @@
 {% extends "base.j2" %}
-{% set title = people[current_item].full_name %}
-{% set person = people[current_item] %}
+{% set title = family[current_item].name %}
+{% set current_family = family[current_item] %}
 {% set sections = ['photos', 'videos', 'audio', 'documents'] %}
 
 {% block content %}
     <div class="d-flex flex-row">
-        <div class="p-2">
-            {% if person.photo_url %}
-            <img class="img-responsive" src="{{ person.photo_url }}" alt="" width="{{ person.photo_width }}">
-            {% else %}
-            <img class="img-responsive" src="/media/{{ current_item }}/photos/main.jpg" alt="">
-            {% endif %}
+        <div class="pr-5">
+            <img class="img-responsive" src="{{ current_family.photo_url }}" alt="" width="{{ current_family.photo_width }}">
         </div>
-        <div class="p-2">
+        {% for person in current_family['people'] %}
+        <div class="pr-5">
             <h2>{{ person.full_name }}</h2>
             <table class="table table-sm">
                 <tr><th>Birth</th><td>{{ person.birth_date }}</td></tr>
-                <tr><th>Death</th><td>{{ person.death_date }}</td></tr>
+                {% if person.death_date %}<tr><th>Death</th><td>{{ person.death_date }}</td></tr>{% endif %}
+                {% if person.links %}
                 <tr><th>Other pages</th><td>
                     <ul class="pl-0 mb-0" style="list-style:none;">
                     {% for link in person.links %}
@@ -24,14 +22,23 @@
                     {% endfor %}
                     </ul>
                 </td></tr>
+                {% endif %}
                 {% if person.description %}<tr><td colspan="2" class="pt-3">{{ person.description }}</td></tr>{% endif %}
             </table>
         </div>
+        {% endfor %}
     </div>
-    <nav class="mt-5">
+
+    {% if current_family.description %}
+    <div class="d-flex flex-row pt-3">
+        <p class="lead">{{ current_family.description }}</p>
+    </div>
+    {% endif %}
+
+    <nav class="mt-3">
         <div class="nav nav-tabs mb-3" id="nav-tab" role="tablist">
             {% for section in sections %}
-                {% if person[section] | count > 0 %}
+                {% if current_family[section] | count > 0 %}
                     <a class="nav-item nav-link"
                        id="nav-{{ section }}-tab"
                        data-bs-toggle="tab"
@@ -43,9 +50,10 @@
             {% endfor %}
         </div>
     </nav>
+
     <div class="tab-content pb-5" id="nav-tabContent">
         {% for section in sections %}
-            {% if person[section] | count > 0 %}
+            {% if current_family[section] | count > 0 %}
                 {% set template_name = section + '.j2' %}
                 <div class="tab-pane fade"
                     id="nav-{{ section }}"
@@ -60,5 +68,5 @@
 {% endblock %}
 
 {% block page_js %}
-    <script src="/js/person.js"></script>
+    <script src="/js/family.js"></script>
 {% endblock %}
