--- a/templates/base.j2
+++ b/templates/base.j2
@@ -26,7 +26,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             {% for item in family | sort %}
                             {% set current_family = family[item] %}
-                                <a class="dropdown-item fs-5" href="{{ current_family['url'] }}">{{ current_family['name'] }}</a>
+                                <a class="dropdown-item fs-5" href="/{{ item }}.html">{{ current_family['name'] }}</a>
                             {% endfor %}
                         </div>
                     </li>
