--- a/templates/documents.j2
+++ b/templates/documents.j2
@@ -1,5 +1,5 @@
-<div class="row">
-    <div id="documentList" class="list-group" style="width:15%; padding-right:20px;">
+<div class="d-flex flex-row">
+    <div id="documentList" class="list-group" role="tablist" style="width:15%; padding-right:20px;">
         {% for document in current_family['documents'] %}
             <a href="#" class="list-group-item list-group-item-action" aria-current="true" data-file="{{ document['url'] }}" data-description="{{ document['description'] }}">{{ document['title'] }}</a>
         {% endfor %}
