--- a/templates/stories.j2
+++ b/templates/stories.j2
@@ -1,5 +1,5 @@
 <div class="d-flex flex-row">
-    <div id="storyList" class="list-group" role="tablist" aria-orientation="vertical" style="width:15%; padding-right:20px;">
+    <div id="storyList" class="list-group" role="tablist" aria-orientation="vertical">
         {% for story in current_family['stories'] %}
         <a href="#" class="list-group-item list-group-item-action"
             id="{{ story['id']}}-tab"
