--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,3 +15,13 @@
     font-size: x-large;
     cursor: pointer;
 }
+
+#otherPagesList {
+    list-style:none;
+}
+
+
+#documentList, #storyList {
+    width:25%;
+    padding-right:20px;
+}
