--- a/templates/audio.j2
+++ b/templates/audio.j2
@@ -1,20 +1,22 @@
-{% for item_batch in current_family.audio | batch(3) %}
-<div class="row mb-4">
+{% set batch_size = current_family.audio_batch_size or 3 %}
+
+{% for item_batch in current_family.audio | batch(batch_size) %}
+<div class="row d-flex">
     {% for item in item_batch %}
-        <div class="col-sm-4">
-            <div class="card">
-                <div class="card-header">{{ item['title'] }}</div>
-                <div class="card-body">
-                    <div class="card-text">
-                        <audio controls class="embed-responsive-item">
-                            <source src="{{ item['url'] }}" type="audio/mpeg"/>
-                            <a href="{{ item['url'] }}">{{ item['title'] }}</a>
-                            An html5-capable browser is required to play this audio.
-                        </audio>
-                    </div>
-                </div>
+    <div class="card ml-3 mb-3">
+        <div class="card-header">{{ item['title'] }}</div>
+        <div class="card-body">
+            <div class="card-text">
+                {% if item['description'] %}<p>{{ item['description'] }} {% endif %}</p>
+                {% if item['image'] %}<p><img src="{{ item['image'] }}" /></p> {% endif %}
+                <audio controls class="embed-responsive-item">
+                    <source src="{{ item['url'] }}" type="audio/mpeg"/>
+                    <a href="{{ item['url'] }}">{{ item['title'] }}</a>
+                    An html5-capable browser is required to play this audio.
+                </audio>
             </div>
         </div>
+    </div>
     {% endfor %}
 </div>
 {% endfor %}
