--- a/templates/family.j2
+++ b/templates/family.j2
@@ -40,11 +40,12 @@
             {% for section in sections %}
                 {% if current_family[section] | count > 0 %}
                     <a class="nav-item nav-link"
-                       id="nav-{{ section }}-tab"
+                       id="{{ section }}-tab"
+                       href="#{{ section }}"
                        data-bs-toggle="tab"
-                       data-bs-target="#nav-{{ section }}"
+                       data-bs-target="#{{ section }}"
                        role="tab"
-                       aria-controls="nav-{{ section }}"
+                       aria-controls="{{ section }}"
                        aria-selected="true">{{ section | capitalize }}</a>
                 {% endif %}
             {% endfor %}
@@ -56,7 +57,7 @@
             {% if current_family[section] | count > 0 %}
                 {% set template_name = section + '.j2' %}
                 <div class="tab-pane fade"
-                    id="nav-{{ section }}"
+                    id="{{ section }}"
                     role="tabpanel"
                     aria-labelledby="nav-{{ section }}-tab">
                     {% include template_name %}
