--- a/templates/documents.j2
+++ b/templates/documents.j2
@@ -1,7 +1,7 @@
 <div class="d-flex flex-row">
     <div id="documentList" class="list-group" role="tablist">
         {% for document in current_family['documents'] %}
-            <a href="#" class="list-group-item list-group-item-action" aria-current="true" data-file="{{ document['url'] }}" data-description="{{ document['description'] }}">{{ document['title'] }}</a>
+            <a href="#" class="list-group-item list-group-item-action" aria-current="true" data-file="{{ mediaDomain }}/{{ document['url'] }}" data-description="{{ document['description'] }}">{{ document['title'] }}</a>
         {% endfor %}
     </div>
     <div class="col pl-0">
